--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ img.aligncenter,
     clear: both;
     margin: 0px 0 0;
     overflow:auto;
-	padding-bottom: 40px;
+	padding-bottom: 90px;
 }
 
 #main-inner {
@@ -693,30 +693,6 @@ nav#access ul.sub-menu li a:hover {
 }
 
 /*
- * Breadcrumbs
- */
-
-#breadcrumbs {
-	margin: 1em 0 0.5em;
-	width: 100%;
-	float: left;
-}
- 
-#breadcrumbs p {
-	color: #898989;
-	font-size: 0.76em;
-	padding-left: 0.4375em;
-}
-
-#breadcrumbs a {
-	color: #66666b;
-}
-
-#breadcrumbs a:hover {
-	text-decoration: underline;
-}
-
-/*
  * Sidebar-menu
  */
 
@@ -772,6 +748,10 @@ nav#access ul.sub-menu li a:hover {
 .image-navigation {
 	max-width: 474px;
 	padding: 0 10px;
+}
+
+.post-navigation {
+	margin: 0 0 3em;
 }
 
 .post-navigation a,
@@ -881,7 +861,6 @@ nav#access ul.sub-menu li a:hover {
 	left: 0;
 	margin-top:190px;
 	z-index: 10;
-	/*opacity: 0;*/
 	padding: 3em 4% 0;
 }
 
@@ -2063,7 +2042,7 @@ div.wpcf7-mail-sent-ok {
 		width: 30px;
 		height: 30px;
 		float: left;
-		margin: 0 2% 0 0;
+		margin: 0 2% 1em 0;
 		content: '  ';
 		display: inline-block;
 		background-image: url(images/elements/icon_contact02.svg);
